Fixed video on mobile in home page

--- a/src/style/_home.scss
+++ b/src/style/_home.scss
@@ -38,6 +38,15 @@
   width: 100%;
 }
 
+.videos-bg {
+  @media screen and (max-width: 992px) {
+    muted: false;
+    loop: false;
+    autoplay: false;
+  }
+}
+
+
 .section-padding {
   padding: 0 20px;
   @media screen and (max-width: 992px) {
